--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullpage/react-fullpage": "^0.1.23",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
